# SoDiferent

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  notatki  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: docs.yml  wheels.yml
SoDiferent/: ODEsolvers.py  __init__.py
_sources/: api.md.txt  index.md.txt  usage.md.txt
docs/source/: api.md  conf.py  index.md  tutorial.ipynb  usage.md
pypakiet/: ODEsolvers.py  __init__.py  funkcje.py
src/: Numeric.cxx  NumericRk.cxx  cfunkcje.c
tests/: test_Rkadaptive.py  test_numeric.py
